cmake_minimum_required (VERSION 3.8)

aux_source_directory(. src)
add_executable (nrpd ${src} )
set_target_properties(nrpd PROPERTIES DEBUG_POSTFIX "d") 
set_target_properties(nrpd PROPERTIES OUTPUT_NAME "hrc.${FILENAME_SUFFIX}")
if (UNIX)
	TARGET_LINK_LIBRARIES(nrpd dl)
endif()
link_directories(${OUTDIR})
